Bug 13133 - The content of the S4U_DELEGATION_INFO PAC element is filled wrong by a Samba KDC
Summary: The content of the S4U_DELEGATION_INFO PAC element is filled wrong by a Samba...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.7.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-14 15:06 UTC by Stefan Metzmacher
Modified: 2020-12-01 19:10 UTC (History)
3 users (show)

See Also:


Attachments
Work in progress patch (1.38 KB, patch)
2017-12-13 12:40 UTC, Stefan Metzmacher
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2017-11-14 15:06:45 UTC
We need the target service without realm, but the proxy services with realm.
Comment 1 Stefan Metzmacher 2017-12-13 12:40:35 UTC
Created attachment 13864 [details]
Work in progress patch
Comment 2 Isaac Boukris 2019-10-21 20:12:13 UTC
Landed in master at:
https://gitlab.com/samba-team/samba/merge_requests/845
Comment 3 Björn Jacke 2020-12-01 19:10:04 UTC
closing as this is in master since sept. 2017 already